Refactored and rearranged

--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -5,62 +5,74 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link th:fragment="top-styles" type="text/css" href="/css/styles.css" rel="stylesheet">
+    <link th:fragment="top-styles-css" type="text/css" href="/css/styles.css" rel="stylesheet">
     <link th:fragment="b-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link th:fragment="bs-min-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link th:fragment="fa-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
+    <link th:fragment="fa-all-min-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
     <script th:fragment="top-js" src="/js/script.js"></script>
+    <script th:fragment="top-script-js" src="/js/script.js"></script>
     <script th:fragment="b-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script th:fragment="bs-bundle-min-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="container-lg navbar navbar-expand-lg bg-body-tertiary mb-3" th:fragment="navbar">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Top</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                    <a class="nav-link" href="/employees/view">Employee</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/orders/pending">Orders</a>
-                </li>
-            </ul>
-            <div class="dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                   sec:authentication="name"></a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
-                    <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</nav>
-    <div th:id="account-nav" class="toggle" style="float: right;">
-        <form id="emp-username-update-form" class="toggle" th:action="@{/update-emp-username}" method="post">
-            <input name="oldUsername" type="hidden" th:value="${#authentication.name}">
-            <input name="newUsername" type="text">
-            <input type="hidden" name="fromMapping" th:value="${#ctx.springRequestContext.requestUri}">
-            <input type="submit">
-        </form>
-        <form id="emp-password-update-form" class="toggle" th:action="@{/update-emp-password}" method="post">
-            <input name="username" type="hidden" th:value="${#authentication.name}">
-            <input name="oldPassword" type="password" placeholder="Old password"> <br>
-            <input name="newPassword" type="password" placeholder="New password"> <br>
-            <input type="hidden" name="fromMapping" th:value="${#ctx.springRequestContext.requestUri}">
-            <input type="submit">
-        </form>
-    </div>
-    <div th:fragment="alertToast" class="toast-container position-fixed top-0 start-50 translate-middle-x p-3">
-        <div id="alertToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">
-                    <span id="alertMessage"></span>
+    <header th:fragment="header">
+
+        <!-- Navbar -->
+        <nav class="container-lg navbar navbar-expand-lg bg-body-tertiary mb-3" th:fragment="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Top</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/employees/view">Employee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/orders/pending">Orders</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                           sec:authentication="name"></a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
+                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </nav>
+    </header>
+
+    <footer th:fragment="footer">
+
+        <!-- Alert toast -->
+        <div th:fragment="alertToast" class="toast-container position-fixed top-0 start-50 translate-middle-x p-3">
+            <div id="alertToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body">
+                        <span id="alertMessage"></span>
+                    </div>
+                    <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
             </div>
         </div>
+    </footer>
+
+    <div th:fragment="bottom-script-n-js">
+
+        <!-- Bootstrap js -->
+        <script th:fragment="bs-bundle-min-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+        <script th:inline="javascript">
+            let alertMessage = /*[[${alertMessage}]]*/
+        </script>
+
+        <!-- Top js -->
+        <script th:fragment="top-script-js" src="/js/script.js"></script>
     </div>
 </body>
 </html>
