--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Save employee</title>
-  <link th:replace="~{frags/general-frags.html :: top-styles}">
-  <link th:replace="~{frags/general-frags.html :: b-css}">
-  <link th:replace="~{frags/general-frags.html :: fa-css}">
-  <script th:replace="~{frags/general-frags.html :: top-js}"></script>
-  <script th:replace="~{frags/general-frags.html :: b-js}"></script>
+  <!--  Top css  -->
+  <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+
+  <!-- Bootstrap css -->
+  <link th:replace="~{frags/general-frags.html :: bs-min-css}">
+
+  <!-- Font awesome css -->
+  <link th:replace="~{frags/general-frags.html :: fa-all-min-css}">
 </head>
 <body>
-<div th:replace="~{frags/general-frags.html :: navbar}"></div>
-<div class="container d-flex justify-content-center">
-  <div class="row g-3 d-flex flex-column align-items-center">
-    <div class="col-lg-8 border p-3">
-      <div>
-        <h2 class="text-center mb-3">Save employee</h2>
-      </div>
-      <div>
-        <div
-                th:replace="~{frags/emp-frags.html :: emp-save-form(isAccountAllowed='true', isBtnSAllowed='true',
+  <!-- Header -->
+  <header th:replace="~{frags/general-frags.html :: header}"></header>
+
+  <!-- Main -->
+  <main class="container d-flex justify-content-center">
+    <div class="row g-3 d-flex flex-column align-items-center">
+      <div class="col-lg-8 border p-3">
+
+        <!-- Main header -->
+        <div><h2 class="text-center mb-3">Save employee</h2></div>
+
+        <!-- Form -->
+        <div th:replace="~{frags/emp-frags.html :: emp-save-form(isAccountAllowed='true', isBtnSAllowed='true',
                   actionLink='save-employee')}"></div>
       </div>
     </div>
-  </div>
-</div>
-<script>
-    if (document.getElementById('hasAccount').checked) {
-      document.getElementById('account-details').style.display = 'block';
-    }
-</script>
+  </main>
+
+  <!-- Footer -->
+  <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
+
+  <!-- Inline script -->
+  <script>
+      if (document.getElementById('hasAccount').checked) {
+        document.getElementById('account-details').style.display = 'block';
+      }
+  </script>
+
+  <!-- Bottom script and js -->
+  <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
 </body>
 </html>
