--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -4,15 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:fragment="top-styles" type="text/css" href="/css/styles.css" rel="stylesheet">
     <link th:fragment="top-styles-css" type="text/css" href="/css/styles.css" rel="stylesheet">
-    <link th:fragment="b-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link th:fragment="bs-min-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link th:fragment="fa-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
     <link th:fragment="fa-all-min-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
-    <script th:fragment="top-js" src="/js/script.js"></script>
     <script th:fragment="top-script-js" src="/js/script.js"></script>
-    <script th:fragment="b-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script th:fragment="bs-bundle-min-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -65,14 +60,14 @@
     <div th:fragment="bottom-script-n-js">
 
         <!-- Bootstrap js -->
-        <script th:fragment="bs-bundle-min-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
         <script th:inline="javascript">
             let alertMessage = /*[[${alertMessage}]]*/
         </script>
 
         <!-- Top js -->
-        <script th:fragment="top-script-js" src="/js/script.js"></script>
+        <script src="/js/script.js"></script>
     </div>
 </body>
 </html>
