--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -1,53 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings</title>
-  <link th:replace="~{frags/general-frags.html :: top-styles}">
-  <link th:replace="~{frags/general-frags.html :: b-css}">
-  <link th:replace="~{frags/general-frags.html :: fa-css}">
-  <script th:replace="~{frags/general-frags.html :: top-js}"></script>
-  <script th:replace="~{frags/general-frags.html :: b-js}"></script>
+  <title>Settings</title>
+  <!--  Top css  -->
+  <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+
+  <!-- Bootstrap css -->
+  <link th:replace="~{frags/general-frags.html :: bs-min-css}">
+
+  <!-- Font awesome css -->
+  <link th:replace="~{frags/general-frags.html :: fa-all-min-css}">
 </head>
 <body>
-<div th:replace="~{frags/general-frags.html :: navbar}"></div>
-<div class="container d-flex justify-content-center">
-  <div class="row g-3 d-flex flex-column align-items-center">
-    <div class="col-lg-8 border px-4 py-3">
-      <div>
-        <h2 class="text-center mb-3">Account settings</h2>
-      </div>
-      <div class="mb-3">
-        <form class="row g-3" th:action="@{update-emp-username}" method="post">
-          <div class="input-group">
-            <input type="text" class="form-control border border-dark" placeholder="New username" name="newUsername">
-            <input class="btn btn-primary" type="submit" value="Update username">
-          </div>
-        </form>
-      </div>
-      <div class="my-4">
+  <!-- Header -->
+  <header th:replace="~{frags/general-frags.html :: header}"></header>
+
+  <!-- Main -->
+  <main class="container d-flex justify-content-center">
+    <div class="row g-3 d-flex flex-column align-items-center">
+      <div class="col-lg-8 border px-4 py-3">
+
+        <!-- Header header -->
+        <div><h2 class="text-center mb-3">Account settings</h2></div>
+
+        <!-- Update username form -->
         <div class="mb-3">
-          <form class="row g-3" th:action="@{update-emp-password}" method="post">
-            <div class="col-md-6 input-group">
-              <input type="password" class="form-control border border-dark" placeholder="Old password" name="oldPassword">
-              <input type="password" class="form-control border border-dark" placeholder="New password" name="newPassword">
-              <input class="btn btn-primary" type="submit" value="Update password">
+          <form class="row g-3" th:action="@{update-emp-username}" method="post">
+            <div class="input-group">
+              <input type="text" class="form-control border border-dark" placeholder="New username" name="newUsername">
+              <input class="btn btn-primary" type="submit" value="Update username">
             </div>
           </form>
         </div>
+
+        <!-- Update password form -->
+        <div class="my-4">
+          <div class="mb-3">
+            <form class="row g-3" th:action="@{update-emp-password}" method="post">
+              <div class="col-md-6 input-group">
+                <input type="password" class="form-control border border-dark" placeholder="Old password" name="oldPassword">
+                <input type="password" class="form-control border border-dark" placeholder="New password" name="newPassword">
+                <input class="btn btn-primary" type="submit" value="Update password">
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div th:replace="~{frags/general-frags.html :: alertToast}"></div>
-<script th:inline="javascript">
-/*<![CDATA[*/
-    let alertMessage = /*[[${alertMessage}]]*/
-    if (alertMessage) {
-        showAlertToast(alertMessage);
-    }
-  /*]]>*/
-</script>
+  </main>
+
+  <!-- Footer -->
+  <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
+
+  <!-- Bottom script and js -->
+  <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
 </body>
 </html>
