--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
-    <link th:replace="~{frags/general-frags.html :: b-css}">
-    <script th:replace="~{frags/general-frags.html :: top-js}"></script>
-    <script th:replace="~{frags/general-frags.html :: b-js}"></script>
+    <!--  Top css  -->
+    <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+
+    <!-- Bootstrap css -->
+    <link th:replace="~{frags/general-frags.html :: bs-min-css}">
+
+    <!-- Font awesome css -->
+    <link th:replace="~{frags/general-frags.html :: fa-all-min-css}">
 </head>
 <body>
-<p th:text="${message}"></p>
-<div th:replace="~{frags/general-frags.html :: alertToast}"></div>
-<script th:inline="javascript">
-/*<![CDATA[*/
-    let alertMessage = /*[[${alertMessage}]]*/
-    if (alertMessage) {
-        showAlertToast(alertMessage);
-        setTimeout(() => {
-          window.location = /*[[${toUrl}]]*/
-        }, 1000);
-    }
-  /*]]>*/
-</script>
+    <!-- Header -->
+    <header th:replace="~{frags/general-frags.html :: header}"></header>
+
+    <!-- Main -->
+    <main>
+        <p th:text="${message}"></p>
+    </main>
+
+    <!-- Footer -->
+    <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
+
+    <!-- Bottom script and js -->
+    <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
 </body>
 </html>
