Changed error message variable name

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,7 +18,7 @@
 
     <!-- Main -->
     <main>
-        <p th:text="${message}"></p>
+        <p th:text="${errorMessage}"></p>
     </main>
 
     <!-- Footer -->
