Added authorization based on roles in html and controllers

--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -22,7 +22,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
+                        <li sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DEVELOPER')" class="nav-item">
                             <a class="nav-link" href="/employees/view">Employee</a>
                         </li>
                         <li class="nav-item">
