--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -133,8 +133,12 @@
                             </td>
                             <td>
                                 <a th:if="${(#authorization.expression('hasRole(''ADMIN'')') and (order.orderStatus == 'PENDING')) or (order.orderStatus != 'PENDING')}"
-                                class="text-decoration-none" role="button"
-                                   data-bs-toggle="modal" th:attr="data-bs-target=|#service-${order.orderId}-details|"
+                                   role="button" data-bs-toggle="modal" th:attr="data-bs-target=|#service-${order.orderId}-details|"
+                                   th:class="text-decoration-none + ' ' +
+                                   ${#strings.concat((order.orderStatus == 'PENDING' and
+                                   order.service.serviceStatus == 'PENDING') ? 'text-danger' : '',
+                                    (order.orderStatus == 'PENDING' and
+                                    order.service.serviceStatus == 'COMPLETED') ? 'text-success' : '')}"
                                         th:text="${order.service.serviceType.name}">
                                 </a>
                                 <div sec:authorize="hasRole('ROLE_EMPLOYEE')" class="btn-group" th:if="${order.orderStatus == 'PENDING'}">
