FIXED: Service types and dimensions showing error after click on logo and then on it.

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -24,8 +24,8 @@
             <!-- Links -->
             <div class="mb-3">
                 <a class="btn btn-outline-primary btn-sm" href="add-order">Add order</a>
-                <a class="btn btn-outline-primary btn-sm" href="service-types/view">Service types</a>
-                <a class="btn btn-outline-primary btn-sm" href="dimensions/view">Dimensions</a>
+                <a class="btn btn-outline-primary btn-sm" href="/orders/service-types/view">Service types</a>
+                <a class="btn btn-outline-primary btn-sm" href="/orders/dimensions/view">Dimensions</a>
             </div>
 
             <!-- Nav tabs -->
