--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -141,7 +141,8 @@
                                     order.service.serviceStatus == 'COMPLETED') ? 'text-success' : '')}"
                                         th:text="${order.service.serviceType.name}">
                                 </a>
-                                <div sec:authorize="hasRole('ROLE_EMPLOYEE')" class="btn-group" th:if="${order.orderStatus == 'PENDING'}">
+                                <div sec:authorize="hasAnyRole('ROLE_EMPLOYEE', 'ROLE_DEVELOPER')" class="btn-group"
+                                     th:if="${order.orderStatus == 'PENDING'}">
 
                                     <!-- Show service details modal trigger button -->
                                     <button class="btn btn-sm" data-bs-toggle="modal"
