--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -25,7 +25,7 @@
         <div class="col-xxl-8 col-xl-10 col-md-12 border p-3">
 
           <!-- Main header -->
-          <div><h2 class="text-center mb-3">Save employee</h2></div>
+          <div><h2 class="text-center mb-3">Save order</h2></div>
 
           <!-- Form -->
           <div>
