FIXED-BUG: Cannot toggle add account check in add employee page

--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -40,6 +40,16 @@
       if (document.getElementById('hasAccount').checked) {
         document.getElementById('account-details').style.display = 'block';
       }
+
+      function toggleData(id) {
+        var element = document.getElementById(id);
+        var elementDisplay = element.style.display;
+        if (elementDisplay === 'none') {
+          element.style.display = 'block';
+        } else {
+          element.style.display = 'none';
+        }
+      }
   </script>
 
   <!-- Bottom script and js -->
