--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -27,7 +27,7 @@
         <div class="col-md-8">
             <div class="input-group mb-3">
                 <label class="input-group-text" for="select-role">Role</label>
-                <select class="form-select" id="select-role" th:field="*{role}" required>
+                <select class="form-select" id="select-role" th:field="*{role}">
                     <option th:each="role : ${roles}"
                             th:value="${role.roleId}"
                             th:text="${role.name}"
