--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -32,6 +32,7 @@
                         <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-plus"></i> Add</button>
                         <p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
                     </div>
+                    <div class="form-text">Resolution format: 1920 x 1080 px</div>
                 </form>
             </div>
 
