Renamed update account option -> Add or update account

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -54,7 +54,7 @@
                                         aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i> Update</button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" th:href="@{|update-employee?id=${emp.employeeId}|}">Update info</a></li>
-                                    <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">Update account</a></li>
+                                    <li><a class="dropdown-item" th:href="@{|update-emp-account?id=${emp.employeeId}|}">Add or Update account</a></li>
                                 </ul>
                             </div>
                             <button class="btn btn-danger btn-sm"
